--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "spatie/laravel-medialibrary": "^10.9",
-        "staudenmeir/eloquent-eager-limit": "^1.0"
+        "staudenmeir/eloquent-eager-limit": "^1.0",
+        "staudenmeir/eloquent-has-many-deep": "^1.18"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.13",
