--- a/.env.example
+++ b/.env.example
@@ -59,3 +59,4 @@ VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 SESSION_DOMAIN=.localhost
 SANCTUM_STATEFUL_DOMAINS=localhost:3000
+MEDIA_DISK=media
