--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^10.8",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "owen-it/laravel-auditing": "^13.5",
         "spatie/laravel-medialibrary": "^10.9",
         "staudenmeir/eloquent-eager-limit": "^1.0",
         "staudenmeir/eloquent-has-many-deep": "^1.18"
