--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/tinker": "^2.8",
         "owen-it/laravel-auditing": "^13.5",
         "spatie/laravel-medialibrary": "^10.9",
+        "spatie/laravel-permission": "^6.3",
         "staudenmeir/eloquent-eager-limit": "^1.0",
         "staudenmeir/eloquent-has-many-deep": "^1.18"
     },
